# slides

./: .gitignore  404.html  README.md  feed.xml  index.html
.github/actions/spectacle/: action.yml
.github/workflows/: gh-pages.yml
2023-04-13_lab-meeting/: index.html
2023-04-13_lab-meeting/js/: main.4ec41b5996d1063105a1.bundle.js  main.d9c7723d81621bcbfbc9.bundle.js  main.d9c7723d81621bcbfbc9.bundle.js.map  runtime.d7188845f07ac35de0da.bundle.js
2023-05-11_lab-meeting/: index.html
2023-05-11_lab-meeting/js/: main.4ec41b5996d1063105a1.bundle.js.map  main.d9c7723d81621bcbfbc9.bundle.js.LICENSE.txt  main.eba7e00ab6ef280c4399.bundle.js  main.eba7e00ab6ef280c4399.bundle.js.map  runtime.d7188845f07ac35de0da.bundle.js.map
2023-05-11_lab-meeting/styles/: main.0ead3391f23a5426fe28.css  main.0ead3391f23a5426fe28.css.map
about/: index.html
site/: _config.yml  index.markdown
site/_data/: slides.yml
site/_includes/: slides.html
src/2023-04-13_lab-meeting/: package.json
src/2023-05-11_lab-meeting/: package.json
src/2023-08-02_earthseed/: README.md  pyproject.toml  serve.py
src/2023-08-02_earthseed/slides/: _config.yml  _toc.yml  intro.md  markdown.md
src/2023-08-02_earthseed/slides/01_dawn/: ansible.md  it-labor.md  it-ucla.md  it-uoit.md  it.md  rproxy.md
src/2023-08-02_earthseed/slides/02_services/: etc.md  nextcloud.md  opm.md
src/2023-08-02_earthseed/slides/03_chatbridge/: chatbridge-architecture.md  chatbridge-client.md  chatbridge-intro.md  chatbridge-server.md  matrix.md  matterbridge.md
src/2023-08-02_earthseed/slides/04_p2p-ld/: comparison.md  nwb.md  problems.md  rdf.md  roadmap.md  ssb.md
src/2023-08-02_earthseed/slides/_static/: custom.css
src/2024-03-27_linkml-arrays/: LICENSE.txt  README.md  pyproject.toml
src/2024-03-27_linkml-arrays/slides/: 2024-03-27.bib  chronicles.md  conf.py  implementation.md  index.md  intro.md  lessons.md  linkml.md  plans.md  previously.md  spec.md
src/2024-03-27_linkml-arrays/slides/_static/: keys.js  main.css
src/2024-09-17_nwb-linkml/: README.md  gulpfile.js  index.html
(+34 files in other folders)
